# RTSPtoYOLO

./: .gitignore  COMMIT_MESSAGE.md  README.md  UV_SETUP.md  pyproject.toml  run_server.py
server/: __init__.py  config.py  main.py  models.py  stream_manager.py  stream_processor.py
server/static/: index.html
